--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="/fontawesome-free-5.12.0-web/js/all.min.js"></script>
+        <script src="https://kit.awesome.com/7e675542d3.js" crossorigin="anonymous'></script>
         <title>Home page</title>
         <style>
             *{
