--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://kit.awesome.com/7e675542d3.js" crossorigin="anonymous'></script>
+        <script src="https://kit.fontawesome.com/7e675542d3.js" crossorigin="anonymous"></script>
         <title>Home page</title>
         <style>
             *{
